# Ha_rebrand_manager

./: Proxy_Issue_Solution_Plan.md  README.md  README_CN.md  __init__.py  const.py  hacs.json  manifest.json  pyproject.toml
.claude/epics/ha-rebrand-testing/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  epic.md  execution-status.md
.claude/epics/remove-text-replacements/: 001.md  002.md  003.md  004.md  005.md  epic.md  execution-status.md
.claude/prds/: ha-rebrand-testing.md  remove-text-replacements.md
.github/workflows/: test.yml
custom_components/ha_rebrand/: __init__.py  manifest.json
custom_components/ha_rebrand/frontend/: ha-rebrand-injector.js  ha-rebrand-panel.js  sidebar-title.js
frontend/: ha-rebrand-injector.js  ha-rebrand-panel.js
ha_rebrand/: PRD.md  README.md  __init__.py  config_flow.py  const.py  manifest.json  strings.json
ha_rebrand/frontend/: ha-rebrand-injector.js  ha-rebrand-panel.js
ha_rebrand/translations/: zh-Hant.json
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_admin_panel.py  test_login_branding.py  test_sidebar.py  test_text_replacement.py
tests/e2e/pages/: __init__.py  admin_panel.py  base_page.py  login_page.py  sidebar.py
tests/fixtures/: __init__.py  sample_configs.py  xss_payloads.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config_flow.py  test_const.py  test_init.py  test_security.py
